# signal-domain-criome

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix
examples/: resolve.nota
schema/: lib.schema  signal-domain-criome.concept.schema
src/: lib.rs
src/schema/: lib.rs
tests/: channel.rs
