[package]
name         = "signal-domain-criome"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
description  = "Ordinary Signal contract for Criome domain resolution and projection."
publish      = false
links        = "signal-domain-criome"
build        = "build.rs"

[lib]
name = "signal_domain_criome"
path = "src/lib.rs"

[features]
default   = []
nota-text = []

[[test]]
name = "channel"
path = "tests/channel.rs"
required-features = ["nota-text"]

[dependencies]
nota    = { git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "drop-next" }

[build-dependencies]
schema-rust = { git = "https://github.com/LiGoldragon/schema-rust.git", branch = "drop-next" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
